Resized everything, fixed the overlapping issue of text within the About Me and the Education

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 
 
-img{
+#Img{
 	border-radius: 8px;
 	border-style: solid;
 	border-width: 5px;
@@ -21,7 +21,53 @@ p{
 h2{
 	color: white;
 }
+
 #AboutText{
+	/*border-style: solid;*/
+	/*border-width: 2px;*/
+	/*border-color: white;*/
+	margin-top: 10px;
+	display: block;
+	padding-right: 0%;
+
+}
+#Education{
+	display:block;
+	max-width: 90%;
+}
+
+.BtnHobbies{
+	margin-bottom: 5%;
+}
+.BtnContact{
+	margin-bottom: 5%;
+}
+
+@media screen and (min-width: 600px) {
+#Img{
+	border-radius: 8px;
+	border-style: solid;
+	border-width: 5px;
+	float:left;
+	max-height:50%;
+	max-width: 50%;
+	display: block;
+}
+
+
+	.Education{
+	max-width: 90%;
+	}
+	.Hobbies{
+	max-width: 40%;
+	display:inline-block;
+	}
+	.Contact{
+	max-width: 40%;
+	display: inline-block;
+	padding-left: 10%
+	}
+	#AboutText{
 	/*border-style: solid;*/
 	/*border-width: 2px;*/
 	/*border-color: white;*/
@@ -29,15 +75,5 @@ h2{
 	display:inline-block;
 	max-width: 40%;
 	height: 50%;
-
-}
-#Education{
-	display:block;
-}
-
-@media screen and (min-width: 600px) {
-	#img {
-		width: 100%;
-		height: 10%;
 	}
-}
+}	
